# solcap-tools

./: .gitignore  Cargo.toml  QUICKSTART.md  README.md
src/: lib.rs  main.rs
src/model/: mod.rs  structs.rs  sysvar.rs  vote.rs
src/reader/: agave_bhd_reader.rs  mod.rs  pcap_iter.rs  solcap_reader.rs  structures.rs
src/tools/: cleanup.rs  coalesce.rs  combine.rs  compare.rs  diff.rs  explore.rs  mod.rs  print.rs  scan.rs  verify.rs
src/utils/: block_validation.rs  mod.rs  spinner.rs
