[package]
name = "solcap-tools"
version = "0.1.0"
edition = "2021"
authors = ["Firedancer Team"]
description = "Tools for analyzing and visualizing solcap files"

[[bin]]
name = "solcap-tools"
path = "src/main.rs"

[lib]
name = "solcap_tools"
path = "src/lib.rs"

[dependencies]
clap = { version = "=4.5.51", features = ["derive"] }
bs58 = "0.5"
hex = "0.4"
pcap-parser = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
indicatif = "0.17"
ratatui = "0.26"
crossterm = "0.27"
bincode = "1.3"
solana-sysvar = { version = "4.0", features = ["bincode"] }
solana-pubkey = "4"
solana-sdk-ids = "3.1"
solana-slot-history = "3"
solana-stake-interface = { version = "3.1", features = ["serde", "sysvar"] }
solana-vote-interface = { version = "5.0.0", features = ["bincode"] }

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
